Fix white spacing

--- a/css/admin.css
+++ b/css/admin.css
@@ -4,9 +4,7 @@ body, html {
     position: absolute;
     top: 0px;
     left:0px;
-}
-
-.bgimg {
+    background-image: url('http://hd-wall-papers.com/images/wallpapers/dark-forest-background/dark-forest-background-7.jpg');
     /* Background image */
     background-image: url('http://hd-wall-papers.com/images/wallpapers/dark-forest-background/dark-forest-background-7.jpg');
     /* Full-screen */
@@ -21,14 +19,6 @@ body, html {
     font-family: "Courier New", Courier, monospace;
     /* Set the font-size to 25 pixels */
     font-size: 25px;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0px;
-    left:0px;
-    padding:0px;
-    margin:0px;
-
 }
 
 /* Position text in the top-left corner */
